fix: prevent questionLog covering board button

--- a/src/orapamine.scss
+++ b/src/orapamine.scss
@@ -356,12 +356,16 @@
   font-size: 24px;
   position: absolute;
   top: 0;
-  left: 55px;
+  left: 60px;
   background-color: #f8f8f8aa;
   border-radius: 6px;
   margin: 0;
   padding: 4px;
   z-index: 1;
+
+  &-hidden {
+    display: none;
+  }
 
   .orp_questionLogTitle {
     font-size: 28px;
@@ -377,7 +381,6 @@
   max-height: var(--boardHeight);
   margin-top: 16px;
 
-  &-hidden,
   &:empty {
     display: none;
   }
@@ -387,6 +390,6 @@
   font-size: 24px;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 8px;
   margin: 0;
 }
